--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   salomon_bottom_bar: ^3.3.1
   flutter_launcher_icons: ^0.12.0
   firebase_messaging: ^14.3.0
+  marquee: ^2.2.3
+  flutter_secure_storage: ^8.0.0
+  flutter_spinkit: ^5.1.0
   
 
 dev_dependencies:
