--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   marquee: ^2.2.3
   flutter_secure_storage: ^8.0.0
   flutter_spinkit: ^5.1.0
+  audioplayers: ^4.0.1
+  flutter_displaymode: ^0.6.0
   
 
 dev_dependencies:
